--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
     <title>Profile</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="media/icons/zimaware-logo-temp.png" type="image/icon type">
+    <link rel="icon" href="media/icons/zimaccess_mini.png" type="image/icon type">
     <link rel="stylesheet" href="css/profile.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -25,6 +25,7 @@
                 <div class="image"> <span><img id="userimage" src="media/icons/user-icon.png"></span>
                     <h3 id="user-fname-lname"></h3>
                     <h4 id="username"></h4>
+                    <h4 id="tag-user-verification">Verified account</h4>
                 </div>
                 <div class="arc"> <span></span> </div>
                 <div class="about">
@@ -87,17 +88,17 @@
 
                     <span class="simple-input-unit">
                         <label>Event title</label>
-                        <input class="field-has-changed" type="text" id="field-event-title"/>
+                        <input class="field-has-changed" type="text" id="field-event-title" autocomplete="new-password"/>
                     </span>
 
                     <span class="simple-input-unit">
                         <label>Post message</label>
-                        <input class="field-has-changed" type="text" id="field-event-post-msg"/>
+                        <input class="field-has-changed" type="text" id="field-event-post-msg" autocomplete="new-password"/>
                     </span>
 
                     <span class="simple-text-area-unit">
                         <label>Event description</label>
-                        <textarea class="field-has-changed" type="text" id="field-event-description" rows="4"></textarea>
+                        <textarea class="field-has-changed" type="text" id="field-event-description" rows="4" autocomplete="new-password"></textarea>
                     </span>
 
                 <div class="container-posters-btn">
@@ -118,14 +119,14 @@
 
                 <span class="simple-input-unit">
                         <label>Event Country</label>
-                        <input type="text" id="event-country" readonly/>
+                        <input type="text" id="event-country" autocomplete="new-password" readonly/>
                 </span>
 
                 <div class="box-country-city">
                     <label>Event city</label>
                         <div class="box-suggestion-input-pair">
                             <span class="btn-input-pair">
-                                <input class="field-has-changed form-control" type="text" placeholder="City" id="id-city" readonly/>
+                                <input class="field-has-changed form-control" type="text" placeholder="City" id="id-city" autocomplete="new-password" readonly/>
                                 <button class="btn btn-primary" id="edit-city">Edit</button>
                             </span>
                             <div class="box-suggestion" id="box-suggestion-cities">
@@ -157,7 +158,7 @@
 
                 <span class="simple-input-unit-price">
                         <label>Event price</label>
-                        <span class="pair-price-currency"><input class="field-has-changed" type="text" id="field-event-price"/><button id="price-currency">USD</button></span>
+                        <span class="pair-price-currency"><input class="field-has-changed" type="text" id="field-event-price" autocomplete="new-password"/><button id="price-currency">USD</button></span>
                 </span>
                     
                 </div>
